# icl-text-classification

./: .gitignore  README.md  distances.txt  pyproject.toml  results.txt  test.csv
results/: uit-victsd-constructiveness-gpt-3.5-turbo-0-shot.csv  uit-victsd-constructiveness-gpt-3.5-turbo-1-shot.csv  uit-victsd-constructiveness-gpt-3.5-turbo-10-shot.csv  uit-victsd-constructiveness-gpt-3.5-turbo-15-shot.csv  uit-victsd-constructiveness-gpt-3.5-turbo-20-shot.csv  uit-victsd-constructiveness-gpt-3.5-turbo-3-shot.csv  uit-victsd-constructiveness-gpt-3.5-turbo-30-shot.csv  uit-victsd-constructiveness-gpt-3.5-turbo-5-shot.csv  uit-victsd-constructiveness-gpt-4-0-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-0-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-1-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-10-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-15-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-20-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-3-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-30-shot.csv  uit-vsfc-sentiment-gpt-3.5-turbo-5-shot.csv  uit-vsfc-sentiment-gpt-4-0-shot.csv  uit-vsfc-sentiment-gpt-4-1-shot.csv  uit-vsfc-sentiment-gpt-4-10-shot.csv  uit-vsfc-sentiment-gpt-4-15-shot.csv  uit-vsfc-sentiment-gpt-4-20-shot.csv  uit-vsfc-sentiment-gpt-4-3-shot.csv  uit-vsfc-sentiment-gpt-4-30-shot.csv  uit-vsfc-sentiment-gpt-4-5-shot.csv  uit-vsfc-topic-gpt-3.5-turbo-0-shot.csv  uit-vsfc-topic-gpt-3.5-turbo-1-shot.csv  uit-vsfc-topic-gpt-3.5-turbo-10-shot.csv  uit-vsfc-topic-gpt-3.5-turbo-15-shot.csv  uit-vsfc-topic-gpt-3.5-turbo-20-shot.csv  uit-vsfc-topic-gpt-3.5-turbo-3-shot.csv  (+26 more)
(+14 files in other folders)
