[tool.poetry]
name = "llm-text-classification"
version = "0.1.0"
description = ""
authors = ["Tore <levietthang0512@outlook.com>"]
readme = "README.md"
packages = [{include = "llm_text_classification"}]

[tool.poetry.dependencies]
python = ">=3.10.12,<3.13"
openai = {extras = ["datalib"], version = "^0.27.8"}
timeout-decorator = "^0.5.0"
black = "^23.7.0"
scikit-learn = "^1.3.0"
requests = "2.28.2"
pyarrow = "^13.0.0"
numpy = "^1.26.0"
cython = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "python setup.py build_ext --inplace"